--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Origin Framework</title>
   </head>
   <body>
+    <h1>Origin Framework</h1>
     <script src="./src/index.ts"></script>
   </body>
 </html>
