--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="container">
       <h1>Origin</h1>
+      <div>
+        <img src="./logo.svg" alt="" />
+      </div>
     </div>
     <script src="./src/index.ts"></script>
   </body>
